<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CultureBook</string>
    <string name="app_slogan">Preserving cultures one story at a time.</string>
    <string name="app_host">culturebook.co.uk</string>
    <string name="version_name">Version: %s</string>

    <!--  AUTHENTICATION  -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_match">Passwords don\'t match</string>
    <string name="password_invalid">Invalid password, make sure it is at least 8 characters in length and contains 1 number</string>
    <string name="email_invalid">Invalid email, make sure it is of the form email@domain.com</string>
    <string name="display_name">Display name</string>
    <string name="description">Description</string>
    <string name="verified">This content is verified.</string>
    <string name="verified_message">This content was uploaded from a user who is considered a credible source of information.</string>
    <string name="title">Title</string>
    <string name="no_elements_found">No elements found</string>
    <string name="no_cultures_found">No cultures found</string>
    <string name="no_contributions_found">No contributions found</string>
    <string name="material_you">Material You</string>
    <string name="material_you_message">Make the app yours!</string>

    <string name="save">Save</string>
    <string name="upload_picture">Upload picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="password_change">Update password</string>
    <string name="request_verification">Request verification status</string>
    <string name="verification_verified">You are already verified</string>
    <string name="verification_requested">Verification status requested</string>
    <string name="verified_user">Verified user</string>
    <string name="verified_text">As a verified user, your posts will have a special flare indicating your status.\n\n
        The verified status is held for users that are credible sources of information.
        \n\nThe verification process is manual, so please help us by telling us in a sentence why you\’d like to apply and we’ll be in touch on your user email.</string>
    <string name="verification_reason">Reason</string>
    <string name="verification_reason_empty">No reason was given, request not sent.</string>
    <string name="password_updated">Password updated successfully.</string>
    <string name="profile_picture_added">Profile picture added</string>
    <string name="profile_picture_removed">Profile picture removed.</string>
    <string name="user_updated">Details updated successfully.</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account? This CANNOT be undone.</string>
    <string name="blocked_elements">Review blocked elements</string>
    <string name="delete_element">Delete element</string>
    <string name="delete_culture">Delete culture</string>
    <string name="delete_contribution">Delete contribution</string>
    <string name="delete_element_text">Are you sure you want to delete this element? Related content such as comments and reactions will be deleted as well.</string>

    <string name="tos">Terms and Conditions</string>
    <string name="read_tos">Read the terms and conditions</string>
    <string name="privacy">Privacy Notice</string>
    <string name="read_privacy">Read the privacy notice</string>
    <string name="accept_tos">Please accept the terms and conditions and the privacy notice</string>

    <string name="duplicate">Sorry this email is already registered.</string>
    <string name="invalid_email">Sorry this email is not valid.</string>
    <string name="invalid_password">Sorry this password is not valid.</string>
    <string name="generic_sorry">Sorry something went wrong, please try again later.</string>
    <string name="google_crapped">Sorry we couldn\'t fetch your account, please try again later.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="tos_update_title">Terms &amp; Conditions update</string>
    <string name="tos_update">The Terms of Service have changed, please accept them to continue.</string>

    <string name="accept">Accept</string>
    <string name="logout">Logout</string>

    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>

    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_password_message">Please enter the email address associated with your account, if it exists we will send you an email to reset your password.</string>
    <string name="new_password_message">Please enter a new password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_success">New password set successfully, please log in.</string>
    <string name="new_password_request_success">Password reset link requested.</string>
    <string name="submit">Submit</string>
    <string name="submit_element">Submit element</string>
    <string name="submit_contribution">Submit contribution</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>

    <!--  HOME  -->
    <string name="explore">Explore</string>
    <string name="account">Account</string>
    <string name="social">Social</string>

    <!--  Add New  -->
    <string name="add_new">Add new element</string>
    <string name="select_location">Select location</string>
    <string name="location_title">Where is it from?</string>
    <string name="location_subtitle">Select the location this element originates from.</string>
    <string name="location_permission">Please allow location access for a better user experience.</string>
    <string name="location_permission_title">Location access permission</string>
    <string name="location_permission_rationale">Location access is needed for showing you nearby cultural elements and when adding a new element.</string>
    <string name="request_permission">Request permission</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>

    <string name="add_culture_message">Please add a culture name, only alphabetic characters and spaces are allowed.</string>
    <string name="add_culture_duplicate">This culture already exists near you.</string>
    <string name="add_culture_title">Add a culture</string>
    <string name="add_new_culture">Add a new culture</string>
    <string name="culture_name">Culture name</string>
    <string name="select_culture">Select culture</string>
    <string name="select_culture_error">Please select a culture to continue</string>
    <string name="select_culture_message">We found these cultures near you, please select one that relates to your cultural element.</string>

    <string name="select_type_and_title_title">What is it?</string>
    <string name="select_type_title">What is its element type?</string>
    <string name="type_filter">Element type filter</string>
    <string name="select_type_message">Select the cultural element type this tradition falls under.</string>

    <string name="select_title">What is the name of this element?</string>
    <string name="select_title_short">Change title</string>
    <string name="select_title_message">Add the name that best describes this tradition.</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="duplicate_element_title">Similar element : %s</string>
    <string name="duplicate_contribution_title">A similar element and contribution already exist.</string>
    <string name="duplicate_element_message">A similar element of type: %s, already exists. Would you like to add a contribution to that element instead?</string>

    <string name="add_info">Add information</string>
    <string name="background">Background</string>
    <string name="background_message">You can add any piece of information you think is relevant.</string>
    <string name="link_elements">Link other elements</string>
    <string name="linked_elements">Linked elements: %s</string>
    <string name="link_more_elements">Link more elements</string>
    <string name="select_date">Select date</string>
    <string name="media">Media</string>
    <string name="event_info">Event information</string>
    <string name="event_info_message">Please add information related to the event.</string>
    <string name="event_date">Event date: %s</string>
    <string name="event_location">Event location: %s</string>
    <string name="media_message">Please add any media (video, audio, images) related to this element. The total size of files should not exceed 50MB</string>
    <string name="add_files">Add File</string>
    <string name="invalid_file">Invalid file type, or file is corrupt</string>
    <string name="files_Size">The total files size exceeds 50MB.</string>
    <string name="show_contributions">Contributions</string>

    <string name="review_submit">Review and submit</string>
    <string name="type">Type</string>
    <string name="background_required">Information about the element is required.</string>
    <string name="event_location_required">The location of the event is required.</string>
    <string name="event_date_required">The date of the event is required.</string>
    <string name="upload_in_progress">Uploading in progress…</string>
    <string name="upload_failed">Upload failed, please try again.</string>
    <string name="upload_success">Upload success.</string>
    <string name="search_filter">Search for…</string>

    <string name="low_accuracy_title">Low location accuracy</string>
    <string name="low_accuracy_message">Your location isn’t accurate, please allow accurate location for a better user experience.</string>

    <string name="no_location_title">Cannot find location</string>
    <string name="no_location_message">Cannot find your location, please allow access to location or use the search function.</string>
    <string name="show_nearby">Show nearby</string>
    <string name="details">Details</string>

    <string name="hide">Hide</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="delete">Delete</string>

    <string name="page_num">Page %d</string>
    <string name="hey_name">Hey, %s</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="favourites">Favourites</string>
    <string name="show_favourites">Show favourites</string>

    <!--    Element Types-->
    <string name="elements">Elements</string>
    <string name="contributions">Contributions</string>
    <string name="directions">Directions</string>
    <string name="cultures">Cultures</string>

    <string name="food">Gastronomy</string>
    <string name="music">Music</string>
    <string name="story">Story</string>
    <string name="poi">Point of Interest</string>
    <string name="event">Local event</string>
    <string name="add_comment">Add a comment</string>
    <string name="no_comments">No comments found.</string>
    <string name="share_string">Check this cultural element out!</string>
    <string name="about_string">Culturebook is a dissertation submitted in partial fulfilment of the requirements for the degree of Bachelor of Science of the University of Portsmouth. The custom vectors used in the app have been generated by an AI using Microsoft Designer.</string>
</resources>