...
                    )
                }
            }
            IconButton(onClick = { onFiltersClicked() }) {
                Icon(
                    painter = AppIcon.Filter.getPainter(),
                    contentDescription = "filters"
                )
            }
        }
    )
}

...
